# allocar-backend

./: .env.example  Dockerfile  README.md  allocar.db  app.py  celery_worker.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
common/: auth.py  enums.py  errors.py  geo.py  idempotency.py  jwt_blocklist.py  otp.py  responses.py  security.py  utils.py  validators.py
domain/admin/: repository.py  routes.py  schemas.py  services.py
domain/audit/: models.py  repository.py  routes.py  schemas.py  services.py
domain/bookings/: models.py  repository.py  routes.py  schemas.py  services.py
domain/disputes/: models.py  repository.py  routes.py  schemas.py  services.py
domain/kyc/: models.py  repository.py  routes.py  schemas.py  services.py
domain/messages/: models.py  repository.py  routes.py  schemas.py  services.py
domain/payments/: models.py  repository.py  routes.py  schemas.py  services.py
domain/promos/: models.py  repository.py  routes.py  schemas.py  services.py
domain/ratings/: models.py  repository.py  routes.py  schemas.py  services.py
domain/referrals/: models.py  repository.py  routes.py  schemas.py  services.py
domain/reports/: routes.py  schemas.py  services.py
domain/trips/: models.py  (+4 more)
extensions/: cache.py  celery.py  db.py  jwt.py  limiter.py  logger.py  mail.py  s3.py  socketio.py
migrations/: env.py  script.py.mako
realtime/: events.py
scripts/: manage.py  seed.py
tests/: conftest.py  test_auth_register_login.py  test_bookings_flow.py  test_messages_ratings.py  test_trips_search.py
(+43 files in other folders)
