[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allocar-backend"
version = "0.1.0"
description = "AlloCar - Backend Flask API"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.0.3",
  "flask-smorest==0.44.0",
  "Flask-SQLAlchemy==3.1.1",
  "SQLAlchemy[asyncio]==2.0.36",
  "psycopg2-binary==2.9.9",
  "geoalchemy2==0.15.2",
  "Flask-Migrate==4.0.7",
  "flask-jwt-extended==4.6.0",
  "Flask-Limiter==3.8.0",
  "redis==5.0.7",
  "celery==5.4.0",
  "kombu==5.4.2",
  "Flask-SocketIO==5.3.7",
  "python-socketio==5.11.3",
  "eventlet==0.36.1",
  "boto3==1.34.162",
  "email-validator==2.2.0",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "werkzeug==3.0.4",
  "itsdangerous==2.2.0",
  "marshmallow==3.21.3",
  "passlib[bcrypt]==1.7.4",
  "structlog==24.2.0",
  "blinker==1.8.2",
  "requests==2.32.3",
  "gunicorn==22.0.0",
]
